src/engine/datablock/parser/parser.output
Grammar

    0 $accept: CONFIG $end

    1 CONFIG: PARAM_LIST

    2 PARAM_LIST: ANNOTATED_PARAM PARAM_LIST
    3           | ANNOTATED_PARAM

    4 ANNOTATED_PARAM: "@" ANNOTATION ":" TEXT BLOCK
    5                | TEXT BLOCK
    6                | "@" ANNOTATION ":" TEXT ":" ATTRIBUTE
    7                | TEXT ":" ATTRIBUTE

    8 ANNOTATION: ANNOTATION_OVERRIDE
    9           | ANNOTATION_DELETE

   10 BLOCK: "{" PARAM_LIST "}"
   11      | "{" "}"

   12 ATTRIBUTE: ATTRIBUTE_TYPE "=" ATTRIBUTE_VALUE

   13 ATTRIBUTE_TYPE: INT_TYPE
   14               | INT_POINT_2D_TYPE
   15               | INT_POINT_3D_TYPE
   16               | INT_POINT_4D_TYPE
   17               | FLOAT_TYPE
   18               | POINT_2D_TYPE
   19               | POINT_3D_TYPE
   20               | POINT_4D_TYPE
   21               | MAT3_TYPE
   22               | MAT4_TYPE
   23               | BOOL_TYPE
   24               | TEXT_TYPE

   25 ATTRIBUTE_VALUE: QUOTES TEXT QUOTES
   26                | FLOAT
   27                | FLOAT "," FLOAT
   28                | FLOAT "," FLOAT "," FLOAT
   29                | FLOAT "," FLOAT "," FLOAT "," FLOAT
   30                | INT
   31                | INT "," INT
   32                | INT "," INT "," INT
   33                | INT "," INT "," INT "," INT
   34                | BOOL
   35                | "[" ROW3 "," ROW3 "," ROW3 "]"
   36                | "[" ROW4 "," ROW4 "," ROW4 "," ROW4 "]"

   37 ROW3: "[" FLOAT "," FLOAT "," FLOAT "]"

   38 ROW4: "[" FLOAT "," FLOAT "," FLOAT "," FLOAT "]"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BOOL <bval> (258) 34
    INT <ival> (259) 30 31 32 33
    FLOAT <fval> (260) 26 27 28 29 37 38
    TEXT <sval> (261) 4 5 6 7 25
    "@" (262) 4 6
    ANNOTATION_OVERRIDE (263) 8
    ANNOTATION_DELETE (264) 9
    ":" (265) 4 6 7
    "=" (266) 12
    "{" (267) 10 11
    "}" (268) 10 11
    "[" (269) 35 36 37 38
    "]" (270) 35 36 37 38
    "," (271) 27 28 29 31 32 33 35 36 37 38
    QUOTES (272) 25
    INT_TYPE (273) 13
    FLOAT_TYPE (274) 17
    TEXT_TYPE (275) 24
    POINT_2D_TYPE (276) 18
    POINT_3D_TYPE (277) 19
    POINT_4D_TYPE (278) 20
    INT_POINT_2D_TYPE (279) 14
    INT_POINT_3D_TYPE (280) 15
    INT_POINT_4D_TYPE (281) 16
    MAT4_TYPE (282) 22
    MAT3_TYPE (283) 21
    BOOL_TYPE (284) 23


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    CONFIG <configNode> (31)
        on left: 1
        on right: 0
    PARAM_LIST <paramListNode> (32)
        on left: 2 3
        on right: 1 2 10
    ANNOTATED_PARAM <paramListNode> (33)
        on left: 4 5 6 7
        on right: 2 3
    ANNOTATION <annotation> (34)
        on left: 8 9
        on right: 4 6
    BLOCK <blockNode> (35)
        on left: 10 11
        on right: 4 5
    ATTRIBUTE <attributeNode> (36)
        on left: 12
        on right: 6 7
    ATTRIBUTE_TYPE <attributeType> (37)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 12
    ATTRIBUTE_VALUE <attributeValue> (38)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 12
    ROW3 <f3val> (39)
        on left: 37
        on right: 35
    ROW4 <f4val> (40)
        on left: 38
        on right: 36


State 0

    0 $accept: . CONFIG $end

    TEXT  shift, and go to state 1
    "@"   shift, and go to state 2

    CONFIG           go to state 3
    PARAM_LIST       go to state 4
    ANNOTATED_PARAM  go to state 5


State 1

    5 ANNOTATED_PARAM: TEXT . BLOCK
    7                | TEXT . ":" ATTRIBUTE

    ":"  shift, and go to state 6
    "{"  shift, and go to state 7

    BLOCK  go to state 8


State 2

    4 ANNOTATED_PARAM: "@" . ANNOTATION ":" TEXT BLOCK
    6                | "@" . ANNOTATION ":" TEXT ":" ATTRIBUTE

    ANNOTATION_OVERRIDE  shift, and go to state 9
    ANNOTATION_DELETE    shift, and go to state 10

    ANNOTATION  go to state 11


State 3

    0 $accept: CONFIG . $end

    $end  shift, and go to state 12


State 4

    1 CONFIG: PARAM_LIST .

    $default  reduce using rule 1 (CONFIG)


State 5

    2 PARAM_LIST: ANNOTATED_PARAM . PARAM_LIST
    3           | ANNOTATED_PARAM .

    TEXT  shift, and go to state 1
    "@"   shift, and go to state 2

    $default  reduce using rule 3 (PARAM_LIST)

    PARAM_LIST       go to state 13
    ANNOTATED_PARAM  go to state 5


State 6

    7 ANNOTATED_PARAM: TEXT ":" . ATTRIBUTE

    INT_TYPE           shift, and go to state 14
    FLOAT_TYPE         shift, and go to state 15
    TEXT_TYPE          shift, and go to state 16
    POINT_2D_TYPE      shift, and go to state 17
    POINT_3D_TYPE      shift, and go to state 18
    POINT_4D_TYPE      shift, and go to state 19
    INT_POINT_2D_TYPE  shift, and go to state 20
    INT_POINT_3D_TYPE  shift, and go to state 21
    INT_POINT_4D_TYPE  shift, and go to state 22
    MAT4_TYPE          shift, and go to state 23
    MAT3_TYPE          shift, and go to state 24
    BOOL_TYPE          shift, and go to state 25

    ATTRIBUTE       go to state 26
    ATTRIBUTE_TYPE  go to state 27


State 7

   10 BLOCK: "{" . PARAM_LIST "}"
   11      | "{" . "}"

    TEXT  shift, and go to state 1
    "@"   shift, and go to state 2
    "}"   shift, and go to state 28

    PARAM_LIST       go to state 29
    ANNOTATED_PARAM  go to state 5


State 8

    5 ANNOTATED_PARAM: TEXT BLOCK .

    $default  reduce using rule 5 (ANNOTATED_PARAM)


State 9

    8 ANNOTATION: ANNOTATION_OVERRIDE .

    $default  reduce using rule 8 (ANNOTATION)


State 10

    9 ANNOTATION: ANNOTATION_DELETE .

    $default  reduce using rule 9 (ANNOTATION)


State 11

    4 ANNOTATED_PARAM: "@" ANNOTATION . ":" TEXT BLOCK
    6                | "@" ANNOTATION . ":" TEXT ":" ATTRIBUTE

    ":"  shift, and go to state 30


State 12

    0 $accept: CONFIG $end .

    $default  accept


State 13

    2 PARAM_LIST: ANNOTATED_PARAM PARAM_LIST .

    $default  reduce using rule 2 (PARAM_LIST)


State 14

   13 ATTRIBUTE_TYPE: INT_TYPE .

    $default  reduce using rule 13 (ATTRIBUTE_TYPE)


State 15

   17 ATTRIBUTE_TYPE: FLOAT_TYPE .

    $default  reduce using rule 17 (ATTRIBUTE_TYPE)


State 16

   24 ATTRIBUTE_TYPE: TEXT_TYPE .

    $default  reduce using rule 24 (ATTRIBUTE_TYPE)


State 17

   18 ATTRIBUTE_TYPE: POINT_2D_TYPE .

    $default  reduce using rule 18 (ATTRIBUTE_TYPE)


State 18

   19 ATTRIBUTE_TYPE: POINT_3D_TYPE .

    $default  reduce using rule 19 (ATTRIBUTE_TYPE)


State 19

   20 ATTRIBUTE_TYPE: POINT_4D_TYPE .

    $default  reduce using rule 20 (ATTRIBUTE_TYPE)


State 20

   14 ATTRIBUTE_TYPE: INT_POINT_2D_TYPE .

    $default  reduce using rule 14 (ATTRIBUTE_TYPE)


State 21

   15 ATTRIBUTE_TYPE: INT_POINT_3D_TYPE .

    $default  reduce using rule 15 (ATTRIBUTE_TYPE)


State 22

   16 ATTRIBUTE_TYPE: INT_POINT_4D_TYPE .

    $default  reduce using rule 16 (ATTRIBUTE_TYPE)


State 23

   22 ATTRIBUTE_TYPE: MAT4_TYPE .

    $default  reduce using rule 22 (ATTRIBUTE_TYPE)


State 24

   21 ATTRIBUTE_TYPE: MAT3_TYPE .

    $default  reduce using rule 21 (ATTRIBUTE_TYPE)


State 25

   23 ATTRIBUTE_TYPE: BOOL_TYPE .

    $default  reduce using rule 23 (ATTRIBUTE_TYPE)


State 26

    7 ANNOTATED_PARAM: TEXT ":" ATTRIBUTE .

    $default  reduce using rule 7 (ANNOTATED_PARAM)


State 27

   12 ATTRIBUTE: ATTRIBUTE_TYPE . "=" ATTRIBUTE_VALUE

    "="  shift, and go to state 31


State 28

   11 BLOCK: "{" "}" .

    $default  reduce using rule 11 (BLOCK)


State 29

   10 BLOCK: "{" PARAM_LIST . "}"

    "}"  shift, and go to state 32


State 30

    4 ANNOTATED_PARAM: "@" ANNOTATION ":" . TEXT BLOCK
    6                | "@" ANNOTATION ":" . TEXT ":" ATTRIBUTE

    TEXT  shift, and go to state 33


State 31

   12 ATTRIBUTE: ATTRIBUTE_TYPE "=" . ATTRIBUTE_VALUE

    BOOL    shift, and go to state 34
    INT     shift, and go to state 35
    FLOAT   shift, and go to state 36
    "["     shift, and go to state 37
    QUOTES  shift, and go to state 38

    ATTRIBUTE_VALUE  go to state 39


State 32

   10 BLOCK: "{" PARAM_LIST "}" .

    $default  reduce using rule 10 (BLOCK)


State 33

    4 ANNOTATED_PARAM: "@" ANNOTATION ":" TEXT . BLOCK
    6                | "@" ANNOTATION ":" TEXT . ":" ATTRIBUTE

    ":"  shift, and go to state 40
    "{"  shift, and go to state 7

    BLOCK  go to state 41


State 34

   34 ATTRIBUTE_VALUE: BOOL .

    $default  reduce using rule 34 (ATTRIBUTE_VALUE)


State 35

   30 ATTRIBUTE_VALUE: INT .
   31                | INT . "," INT
   32                | INT . "," INT "," INT
   33                | INT . "," INT "," INT "," INT

    ","  shift, and go to state 42

    $default  reduce using rule 30 (ATTRIBUTE_VALUE)


State 36

   26 ATTRIBUTE_VALUE: FLOAT .
   27                | FLOAT . "," FLOAT
   28                | FLOAT . "," FLOAT "," FLOAT
   29                | FLOAT . "," FLOAT "," FLOAT "," FLOAT

    ","  shift, and go to state 43

    $default  reduce using rule 26 (ATTRIBUTE_VALUE)


State 37

   35 ATTRIBUTE_VALUE: "[" . ROW3 "," ROW3 "," ROW3 "]"
   36                | "[" . ROW4 "," ROW4 "," ROW4 "," ROW4 "]"

    "["  shift, and go to state 44

    ROW3  go to state 45
    ROW4  go to state 46


State 38

   25 ATTRIBUTE_VALUE: QUOTES . TEXT QUOTES

    TEXT  shift, and go to state 47


State 39

   12 ATTRIBUTE: ATTRIBUTE_TYPE "=" ATTRIBUTE_VALUE .

    $default  reduce using rule 12 (ATTRIBUTE)


State 40

    6 ANNOTATED_PARAM: "@" ANNOTATION ":" TEXT ":" . ATTRIBUTE

    INT_TYPE           shift, and go to state 14
    FLOAT_TYPE         shift, and go to state 15
    TEXT_TYPE          shift, and go to state 16
    POINT_2D_TYPE      shift, and go to state 17
    POINT_3D_TYPE      shift, and go to state 18
    POINT_4D_TYPE      shift, and go to state 19
    INT_POINT_2D_TYPE  shift, and go to state 20
    INT_POINT_3D_TYPE  shift, and go to state 21
    INT_POINT_4D_TYPE  shift, and go to state 22
    MAT4_TYPE          shift, and go to state 23
    MAT3_TYPE          shift, and go to state 24
    BOOL_TYPE          shift, and go to state 25

    ATTRIBUTE       go to state 48
    ATTRIBUTE_TYPE  go to state 27


State 41

    4 ANNOTATED_PARAM: "@" ANNOTATION ":" TEXT BLOCK .

    $default  reduce using rule 4 (ANNOTATED_PARAM)


State 42

   31 ATTRIBUTE_VALUE: INT "," . INT
   32                | INT "," . INT "," INT
   33                | INT "," . INT "," INT "," INT

    INT  shift, and go to state 49


State 43

   27 ATTRIBUTE_VALUE: FLOAT "," . FLOAT
   28                | FLOAT "," . FLOAT "," FLOAT
   29                | FLOAT "," . FLOAT "," FLOAT "," FLOAT

    FLOAT  shift, and go to state 50


State 44

   37 ROW3: "[" . FLOAT "," FLOAT "," FLOAT "]"
   38 ROW4: "[" . FLOAT "," FLOAT "," FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 51


State 45

   35 ATTRIBUTE_VALUE: "[" ROW3 . "," ROW3 "," ROW3 "]"

    ","  shift, and go to state 52


State 46

   36 ATTRIBUTE_VALUE: "[" ROW4 . "," ROW4 "," ROW4 "," ROW4 "]"

    ","  shift, and go to state 53


State 47

   25 ATTRIBUTE_VALUE: QUOTES TEXT . QUOTES

    QUOTES  shift, and go to state 54


State 48

    6 ANNOTATED_PARAM: "@" ANNOTATION ":" TEXT ":" ATTRIBUTE .

    $default  reduce using rule 6 (ANNOTATED_PARAM)


State 49

   31 ATTRIBUTE_VALUE: INT "," INT .
   32                | INT "," INT . "," INT
   33                | INT "," INT . "," INT "," INT

    ","  shift, and go to state 55

    $default  reduce using rule 31 (ATTRIBUTE_VALUE)


State 50

   27 ATTRIBUTE_VALUE: FLOAT "," FLOAT .
   28                | FLOAT "," FLOAT . "," FLOAT
   29                | FLOAT "," FLOAT . "," FLOAT "," FLOAT

    ","  shift, and go to state 56

    $default  reduce using rule 27 (ATTRIBUTE_VALUE)


State 51

   37 ROW3: "[" FLOAT . "," FLOAT "," FLOAT "]"
   38 ROW4: "[" FLOAT . "," FLOAT "," FLOAT "," FLOAT "]"

    ","  shift, and go to state 57


State 52

   35 ATTRIBUTE_VALUE: "[" ROW3 "," . ROW3 "," ROW3 "]"

    "["  shift, and go to state 58

    ROW3  go to state 59


State 53

   36 ATTRIBUTE_VALUE: "[" ROW4 "," . ROW4 "," ROW4 "," ROW4 "]"

    "["  shift, and go to state 60

    ROW4  go to state 61


State 54

   25 ATTRIBUTE_VALUE: QUOTES TEXT QUOTES .

    $default  reduce using rule 25 (ATTRIBUTE_VALUE)


State 55

   32 ATTRIBUTE_VALUE: INT "," INT "," . INT
   33                | INT "," INT "," . INT "," INT

    INT  shift, and go to state 62


State 56

   28 ATTRIBUTE_VALUE: FLOAT "," FLOAT "," . FLOAT
   29                | FLOAT "," FLOAT "," . FLOAT "," FLOAT

    FLOAT  shift, and go to state 63


State 57

   37 ROW3: "[" FLOAT "," . FLOAT "," FLOAT "]"
   38 ROW4: "[" FLOAT "," . FLOAT "," FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 64


State 58

   37 ROW3: "[" . FLOAT "," FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 65


State 59

   35 ATTRIBUTE_VALUE: "[" ROW3 "," ROW3 . "," ROW3 "]"

    ","  shift, and go to state 66


State 60

   38 ROW4: "[" . FLOAT "," FLOAT "," FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 67


State 61

   36 ATTRIBUTE_VALUE: "[" ROW4 "," ROW4 . "," ROW4 "," ROW4 "]"

    ","  shift, and go to state 68


State 62

   32 ATTRIBUTE_VALUE: INT "," INT "," INT .
   33                | INT "," INT "," INT . "," INT

    ","  shift, and go to state 69

    $default  reduce using rule 32 (ATTRIBUTE_VALUE)


State 63

   28 ATTRIBUTE_VALUE: FLOAT "," FLOAT "," FLOAT .
   29                | FLOAT "," FLOAT "," FLOAT . "," FLOAT

    ","  shift, and go to state 70

    $default  reduce using rule 28 (ATTRIBUTE_VALUE)


State 64

   37 ROW3: "[" FLOAT "," FLOAT . "," FLOAT "]"
   38 ROW4: "[" FLOAT "," FLOAT . "," FLOAT "," FLOAT "]"

    ","  shift, and go to state 71


State 65

   37 ROW3: "[" FLOAT . "," FLOAT "," FLOAT "]"

    ","  shift, and go to state 72


State 66

   35 ATTRIBUTE_VALUE: "[" ROW3 "," ROW3 "," . ROW3 "]"

    "["  shift, and go to state 58

    ROW3  go to state 73


State 67

   38 ROW4: "[" FLOAT . "," FLOAT "," FLOAT "," FLOAT "]"

    ","  shift, and go to state 74


State 68

   36 ATTRIBUTE_VALUE: "[" ROW4 "," ROW4 "," . ROW4 "," ROW4 "]"

    "["  shift, and go to state 60

    ROW4  go to state 75


State 69

   33 ATTRIBUTE_VALUE: INT "," INT "," INT "," . INT

    INT  shift, and go to state 76


State 70

   29 ATTRIBUTE_VALUE: FLOAT "," FLOAT "," FLOAT "," . FLOAT

    FLOAT  shift, and go to state 77


State 71

   37 ROW3: "[" FLOAT "," FLOAT "," . FLOAT "]"
   38 ROW4: "[" FLOAT "," FLOAT "," . FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 78


State 72

   37 ROW3: "[" FLOAT "," . FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 79


State 73

   35 ATTRIBUTE_VALUE: "[" ROW3 "," ROW3 "," ROW3 . "]"

    "]"  shift, and go to state 80


State 74

   38 ROW4: "[" FLOAT "," . FLOAT "," FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 81


State 75

   36 ATTRIBUTE_VALUE: "[" ROW4 "," ROW4 "," ROW4 . "," ROW4 "]"

    ","  shift, and go to state 82


State 76

   33 ATTRIBUTE_VALUE: INT "," INT "," INT "," INT .

    $default  reduce using rule 33 (ATTRIBUTE_VALUE)


State 77

   29 ATTRIBUTE_VALUE: FLOAT "," FLOAT "," FLOAT "," FLOAT .

    $default  reduce using rule 29 (ATTRIBUTE_VALUE)


State 78

   37 ROW3: "[" FLOAT "," FLOAT "," FLOAT . "]"
   38 ROW4: "[" FLOAT "," FLOAT "," FLOAT . "," FLOAT "]"

    "]"  shift, and go to state 83
    ","  shift, and go to state 84


State 79

   37 ROW3: "[" FLOAT "," FLOAT . "," FLOAT "]"

    ","  shift, and go to state 85


State 80

   35 ATTRIBUTE_VALUE: "[" ROW3 "," ROW3 "," ROW3 "]" .

    $default  reduce using rule 35 (ATTRIBUTE_VALUE)


State 81

   38 ROW4: "[" FLOAT "," FLOAT . "," FLOAT "," FLOAT "]"

    ","  shift, and go to state 86


State 82

   36 ATTRIBUTE_VALUE: "[" ROW4 "," ROW4 "," ROW4 "," . ROW4 "]"

    "["  shift, and go to state 60

    ROW4  go to state 87


State 83

   37 ROW3: "[" FLOAT "," FLOAT "," FLOAT "]" .

    $default  reduce using rule 37 (ROW3)


State 84

   38 ROW4: "[" FLOAT "," FLOAT "," FLOAT "," . FLOAT "]"

    FLOAT  shift, and go to state 88


State 85

   37 ROW3: "[" FLOAT "," FLOAT "," . FLOAT "]"

    FLOAT  shift, and go to state 89


State 86

   38 ROW4: "[" FLOAT "," FLOAT "," . FLOAT "," FLOAT "]"

    FLOAT  shift, and go to state 90


State 87

   36 ATTRIBUTE_VALUE: "[" ROW4 "," ROW4 "," ROW4 "," ROW4 . "]"

    "]"  shift, and go to state 91


State 88

   38 ROW4: "[" FLOAT "," FLOAT "," FLOAT "," FLOAT . "]"

    "]"  shift, and go to state 92


State 89

   37 ROW3: "[" FLOAT "," FLOAT "," FLOAT . "]"

    "]"  shift, and go to state 83


State 90

   38 ROW4: "[" FLOAT "," FLOAT "," FLOAT . "," FLOAT "]"

    ","  shift, and go to state 84


State 91

   36 ATTRIBUTE_VALUE: "[" ROW4 "," ROW4 "," ROW4 "," ROW4 "]" .

    $default  reduce using rule 36 (ATTRIBUTE_VALUE)


State 92

   38 ROW4: "[" FLOAT "," FLOAT "," FLOAT "," FLOAT "]" .

    $default  reduce using rule 38 (ROW4)
